2010-08-12  Michael Meyer <michael.meyer@greenbone.net>

	* tools/openvas-mkcert-client.in:
	Bugfix (line 461: [: too many arguments).

2010-08-04  Felix Wolfsteller <felix.wolfsteller@greenbone.net>

	* tools/README, tools/README_TOOLS: Moved, such that doxygen will
	include the correct README in the main page.

	* MANIFEST: Updated entry.

2010-07-26  Felix Wolfsteller <felix.wolfsteller@greenbone.net>

	* openvassd/preferences.c: Resolved K&R function declarations.
	(preferences_get_string): Minor doc added.

2010-07-14  Michael Wiegand <michael.wiegand@greenbone.net>

	Post-release version bump.

	* VERSION: Set to 3.1.1.SVN.

	* doc/Doxyfile, doc/Doxyfile_full: Increased PROJECT_NUMBER accordingly.

2010-07-14  Michael Wiegand <michael.wiegand@greenbone.net>

	Preparing the openvas-scanner 3.1.0 release.

	* VERSION: Set to 3.1.0.

	* doc/Doxyfile, doc/Doxyfile_full: Updated PROJECT_NUMBER.

	* CHANGES: Updated.

2010-07-05  Michael Wiegand <michael.wiegand@greenbone.net>

	* openvassd/openvassd.c (main): Remove superfluous libnasl version
	from --dump-cfg output.

2010-07-02  Michael Wiegand <michael.wiegand@greenbone.net>

	* openvassd/pluginscheduler.c (hash_fill_deps): Remove overly verbose
	log message when looking for dependencies.

2010-07-01  Michael Wiegand <michael.wiegand@greenbone.net>

	Post-release version bump.

	* VERSION: Set to 3.1.0.rc4.SVN.

	* doc/Doxyfile, doc/Doxyfile_full: Increased PROJECT_NUMBER accordingly.

2010-07-01  Michael Wiegand <michael.wiegand@greenbone.net>

	Preparing the openvas-scanner 3.1.0.rc3 release.

	* VERSION: Set to 3.1.0.rc3.

	* doc/Doxyfile, doc/Doxyfile_full: Updated PROJECT_NUMBER.

	* CHANGES: Updated.

2010-06-30  Michael Wiegand <michael.wiegand@greenbone.net>

	* openvassd/users.c (check_user): Finally remove legacy support for
	passwords stored in plaintext.

2010-06-28  Michael Wiegand <michael.wiegand@greenbone.net>

	Post-release version bump.

	* VERSION: Set to 3.1.0.rc3.SVN.
