@@ -1,3 +1,29 @@
+/* OpenVAS
+* $Id$
+* Description: Port scanner Synscan
+*
+* Authors:
+* Renaud Deraison <deraison@nessus.org> (Original pre-fork develoment)
+*
+* Copyright:
+* Based on work Copyright (C) 1998 - 2006 Tenable Network Security, Inc.
+*
+* This program is free software; you can redistribute it and/or modify
+* it under the terms of the GNU General Public License version 2,
+* as published by the Free Software Foundation
+*
+* This program is distributed in the hope that it will be useful,
+* but WITHOUT ANY WARRANTY; without even the implied warranty of
+* MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+* GNU General Public License for more details.
+*
+* You should have received a copy of the GNU General Public License
+* along with this program; if not, write to the Free Software
+* Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301 USA.
+*
+*
+*/
+
 #define _BSD_SOURCE 1
 
 #include <includes.h>
