@@ -1,3 +1,11 @@
+2010-08-12  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
+
+	* cnvts/synscan/synscan.c: Added missing header with license
+	and copyright. This file originates from the -plugins module
+	and includes GPLv2 headers. It was and is linking GPLed nasl.
+	So, the conservative assumption is GPLv2 (without the "or any
+	later version" clause).
+
 2010-08-12  Michael Meyer <michael.meyer@greenbone.net>
 
 	* tools/openvas-mkcert-client.in:
